--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "expo-image-picker": "~12.0.1",
     "expo-linear-gradient": "~11.0.0",
     "expo-status-bar": "~1.2.0",
-    "react": "17.0.1",
+    "react": "^17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "~2.1.0",
@@ -25,7 +25,8 @@
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-redux": "^7.2.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
